[package]
name = "diesel_example"
version = "0.1.0"
authors = ["mk10969 <mk10969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.15"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
